# duckdb

./: .gitignore  CMakeLists.txt
examples/embedded-c++/: CMakeLists.txt  README.MD  code.py  code_template.py  example_lightgbm.cpp  server_start.sh  sub_interpreter.cpp  test_prediction_native.cpp  tpchq6_udf.cpp  udf.cpp  udf2.cpp  udf3.cpp  udf4.cpp  udf5.cpp  udf_pf7.cpp  udf_server.cpp
examples/embedded-c++/imbridge/: CMakeLists.txt  code.py  server_start.sh  udf_server.cpp
examples/embedded-c++/imbridge_test/: CMakeLists.txt  all_end2end.sh  data  test_end2end.sh  test_permutation.sh  test_scalability.sh
examples/embedded-c++/imbridge_test/communication_cost/: CMakeLists.txt  handle.py  pf1.cpp  pf1.py  pf1_code_template.py  pf1_infer.py  pf1_sparksql.py  pf1_sparksql_origin.py  pf7.cpp  pf7.py  pf7_code_template.py  pf7_infer.py  pf7_sparksql.py  preprocessing.py  test_script.sh  uc10.cpp  uc10.py  uc10_code_template.py  uc10_infer.py  uc10_sparksql.py
examples/embedded-c++/imbridge_test/cpu_usage/: CMakeLists.txt  cpu_check.py  pf1-2.cpp  pf1.py  pf1_sparksql.py  pf2.py  pf2_sparksql.py
examples/embedded-c++/imbridge_test/permutation/: CMakeLists.txt  parse_log.py  pf3.cpp  pf3_code_template.py  pf4.cpp  pf4_code_template.py  pf5.cpp  pf5_code_template.py  pf6.cpp  pf6_code_template.py
examples/embedded-c++/imbridge_test/raven/: CMakeLists.txt  load_data_pf.py  pf1.cpp  pf1.py  pf1_code_template.py  pf1_infer.py  pf2.cpp  pf2.py  pf2_code_template.py  pf2_infer.py  pf3.cpp  pf3.py  pf3_code_template.py  pf3_infer.py  pf4.cpp  pf4.py  pf4_code_template.py  pf4_infer.py  pf5.cpp  pf5.py  pf5_code_template.py  pf5_infer.py  pf6.cpp  pf6.py  pf6_code_template.py  pf6_infer.py  pf7.cpp  pf7.py  pf7_code_template.py  pf7_infer.py  pf8.cpp  pf8.py  pf8_code_template.py  pf8_infer.py
examples/embedded-c++/imbridge_test/tpcx_ai/: CMakeLists.txt  load_data_tpc_ai.py  uc01.cpp  uc01.py  uc01_code_template.py  uc01_infer.py  uc03.cpp  uc03.py  uc03_code_template.py  uc03_infer.py  uc04.cpp  uc04.py  uc04_code_template.py  uc04_infer.py  uc06.cpp  uc06.py  uc06_code_template.py  uc06_infer.py  uc07.cpp  uc07.py  uc07_code_template.py  uc07_infer.py  uc08.cpp  uc08.py  uc08_code_template.py  uc08_infer.py  uc10.cpp  uc10.py  uc10_code_template.py  uc10_infer.py
extension/fts/: CMakeLists.txt
extension/icu/: CMakeLists.txt
extension/jemalloc/: CMakeLists.txt
extension/json/: CMakeLists.txt
extension/parquet/: CMakeLists.txt
extension/tpcds/: CMakeLists.txt
extension/tpch/: CMakeLists.txt
extension/visualizer/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  enum_util.cpp
src/common/arrow/: CMakeLists.txt  arrow_transform_util.cpp
src/common/enums/: optimizer_type.cpp  physical_operator_type.cpp
src/common/ipc/: CMakeLists.txt  shared_memory_manager.cpp
src/common/types/: data_chunk.cpp
src/execution/: CMakeLists.txt  adaptive_batch_tuner.cpp  batch_controller.cpp  chunk_buffer.cpp  column_binding_resolver.cpp  expression_executor.cpp  expression_executor_state.cpp  physical_plan_generator.cpp
src/execution/expression_executor/: execute_between.cpp  execute_case.cpp  execute_cast.cpp  execute_comparison.cpp  execute_conjunction.cpp  execute_constant.cpp  execute_function.cpp  execute_operator.cpp  execute_parameter.cpp  execute_reference.cpp
src/execution/operator/: CMakeLists.txt
src/execution/operator/filter/: CMakeLists.txt  physical_filter.cpp  physical_prediction_filter.cpp
src/execution/operator/projection/: CMakeLists.txt  physical_prediction_projection.cpp
src/execution/operator/udf/: CMakeLists.txt  physical_udf.cpp
src/execution/physical_plan/: CMakeLists.txt  plan_any_join.cpp  plan_comparison_join.cpp  plan_filter.cpp  plan_prediction_util.cpp  plan_projection.cpp  plan_udf.cpp
src/function/: udf_function.cpp
src/function/table/: arrow.cpp
src/include/duckdb/common/: vector_size.hpp
src/include/duckdb/common/arrow/: arrow_transform_util.hpp
src/include/duckdb/common/enums/: logical_operator_type.hpp  optimizer_type.hpp  physical_operator_type.hpp
src/include/duckdb/common/ipc/: shared_memory_manager.hpp
src/include/duckdb/common/types/: data_chunk.hpp  selection_vector.hpp  vector.hpp
src/include/duckdb/execution/: expression_executor.hpp  expression_executor_state.hpp  physical_operator.hpp  physical_plan_generator.hpp
src/include/duckdb/function/: function.hpp  scalar_function.hpp  udf_function.hpp
src/include/duckdb/function/table/: arrow.hpp
src/include/duckdb/main/: client_context.hpp  connection.hpp
src/include/duckdb/optimizer/: udf_split.hpp
src/include/duckdb/parallel/: task_scheduler.hpp
src/include/duckdb/planner/: logical_tokens.hpp
src/include/imbridge/execution/: adaptive_batch_tuner.hpp  batch_controller.hpp  chunk_buffer.hpp  plan_prediction_util.hpp
src/main/: config.cpp
src/optimizer/: CMakeLists.txt  expression_rewriter.cpp  optimizer.cpp  udf_split.cpp
src/optimizer/matcher/: expression_matcher.cpp
src/parallel/: CMakeLists.txt  pipeline.cpp  pipeline_executor.cpp  task_scheduler.cpp
src/planner/expression/: bound_aggregate_expression.cpp  bound_function_expression.cpp
src/planner/operator/: CMakeLists.txt  logical_udf.cpp
src/storage/serialization/: serialize_logical_operator.cpp
test/: CMakeLists.txt
tools/: CMakeLists.txt
tools/pythonpkg/: CMakeLists.txt  duckdb_python.cpp
tools/pythonpkg/duckdb-stubs/: __init__.pyi
tools/pythonpkg/duckdb-stubs/functional/: __init__.pyi
tools/pythonpkg/duckdb/functional/: __init__.py
tools/pythonpkg/scripts/: connection_methods.json  generate_connection_methods.py  generate_connection_wrapper_methods.py
tools/pythonpkg/src/: CMakeLists.txt  importer.cpp  pyconnection.cpp  python_udf.cpp
tools/pythonpkg/src/arrow/: CMakeLists.txt  arrow_array_stream.cpp  arrow_transform_utils.cpp
tools/pythonpkg/src/functional/: functional.cpp
tools/pythonpkg/src/numpy/: numpy_scan.cpp
tools/pythonpkg/tests/prediction_udf/: test_prediction_udf.py
tools/sqlite3_api_wrapper/: CMakeLists.txt
(+8 files in other folders)
