

add_executable(pf1 pf1.cpp)
target_link_libraries(pf1 duckdb)

add_executable(pf2 pf2.cpp)
target_link_libraries(pf2 duckdb)

add_executable(pf3 pf3.cpp)
target_link_libraries(pf3 duckdb)

add_executable(pf4 pf4.cpp)
target_link_libraries(pf4 duckdb)

add_executable(pf5 pf5.cpp)
target_link_libraries(pf5 duckdb)

add_executable(pf6 pf6.cpp)
target_link_libraries(pf6 duckdb)

add_executable(pf7 pf7.cpp)
target_link_libraries(pf7 duckdb)

add_executable(pf8 pf8.cpp)
target_link_libraries(pf8 duckdb)