add_executable(uc01 uc01.cpp)
target_link_libraries(uc01 duckdb)

add_executable(uc03 uc03.cpp)
target_link_libraries(uc03 duckdb)

add_executable(uc04 uc04.cpp)
target_link_libraries(uc04 duckdb)

add_executable(uc06 uc06.cpp)
target_link_libraries(uc06 duckdb)

add_executable(uc07 uc07.cpp)
target_link_libraries(uc07 duckdb)

add_executable(uc08 uc08.cpp)
target_link_libraries(uc08 duckdb)

add_executable(uc10 uc10.cpp)
target_link_libraries(uc10 duckdb)